--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <i class="fa-solid fa-wifi"></i>
+            <span>
+                <i class="fa-solid fa-wifi"></i>
+            </span>
         </div>
         <div class="status-bar__column">
             <span>12:00</span>
