--- a/chats.html
+++ b/chats.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chats - Kokoa Clone</title>
 </head>
+<body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -60,7 +61,7 @@
             </div>
         </div>
 
-        <br>
+        <div class="divider"></div>
 
         <div class="user-component">
             <div class="user-component__column">
