--- a/find.html
+++ b/find.html
@@ -8,6 +8,7 @@
     <title>Find - Kokoa Clone</title>
 
 </head>
+<body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -42,20 +43,20 @@
 
 
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-address-book"></i>
                 <span>Add by Contacts</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-fingerprint"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fa-solid fa-envelope"></i>
                 <span>Invite</span>
             </div>
