--- a/more.html
+++ b/more.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friends - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
 
 </head>
 <body>
+
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
             <i class="fa-solid fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>12:00</span>
+            <span>12:01</span>
         </div>
         <div class="status-bar__column">
-            <span>100%</span>
+            <span>99%</span>
             <span>
                 <i class="fa-solid fa-battery-full fa-lg"></i>
             </span>
@@ -29,7 +30,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
+        <h1 class="screen-header__title">More</h1>
         <div class="screen-header__icons">
             <span>
                 <i class="fa-solid fa-magnifying-glass fa-lg"></i>
@@ -38,61 +39,92 @@
                 <i class="fa-solid fa-music fa-lg"></i>
             </span>
             <span>
+                <a href="settings.html">
                 <i class="fa-solid fa-gear fa-lg"></i>
+                </a>
+                <span class="screen-more-reddot"> </span>
             </span>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fa-solid fa-circle-info"></i>
-        Friends' Names Display
-        <i class="fa-solid fa-angle-right fa-xs"></i>
-    </a>
 
-    <main class="friends-screen">
+    <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="img/証明写真.jpg" class="user-component__avatar user-component__avatar--xl" />
                 <div class="user-component__text">
                     <h4 class="user-component__title">Kim</h4>
-                    <!--<h6 class="user-component__subtitle">this text watever</h6>-->
+                    <h6 class="user-component__subtitle">010-1234-5678
+                        <span class="user-component__exclamation">!</span>
+                    </h6>
                 </div>
             </div>
-            <div class="user-component__column"></div>
+            <div class="user-component__column">
+                <i class="far fa-message fa-2x"></i>
+            </div>
         </div>
 
-        <div class="friends-screen_channel">
-            <div class="friends-screen_channel-header">
-                <span>Channel</span>
-                <i class="fa-solid fa-angle-up fa-xs"></i>
+        <div class="icon-row">
+            <span class="icon-row__red-dot"> </span>
+            <div class="icon-row__icon">
+                <i class="far fa-calendar"></i>
+                <span>Calendar</span>
             </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="img/profile_1.jpg" class="user-component__avatar user-component__avatar--sm" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>                    </div>
+            <div class="icon-row__icon">
+                <i class="fa-solid fa-box-archive"></i>
+                <span>Talk Drive</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far fa-face-smile"></i>
+                <span>Emoticons</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="fa-solid fa-brush"></i>
+                <span>Themes</span>
+            </div>
+        </div>
+    
+        <div class="icon-row">
+            <div class="icon-row__icon">
+                <i class="far fa-id-badge"></i>
+                <span>Account</span>
+            </div>
+            <div class="icon-row__icon">
+                <i class="far fa-comments"></i>
+                <span>Openchat</span>
+            </div>
+        </div>
+
+        <div class="more-suggestion">
+            <h4 class="more-suggestion__title">Suggestions</h4>
+            <div class="more-suggestion__icons">
+                <div class="more-suggestion__icon">
+                    <div class="more-suggestion__image">
+                        <i class="fa-solid fa-quote-right"></i>
+                    </div>
+                    <span class="more-suggestion__image-text">Kokoa Story</span>
                 </div>
-                <div class="user-component__column">
-                    <div>                    
-                        <span>2</span>
-                        <i class="fa-solid fa-angle-right fa-xs"></i>
-                    </div>                
+                <div class="more-suggestion__icon">
+                    <div class="more-suggestion__image">
+                        <i class="fa-solid fa-k"></i>
+                    </div>
+                    <span class="more-suggestion__image-text">Kim Story</span>
                 </div>
             </div>
         </div>
+
     </main>
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                <i class="fa-solid fa-user fa-2x"></i>
+                <i class="far fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
-                <i class="far fa-comment fa-2x"></i>
+                    <i class="far fa-comment fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
