--- a/more.html
+++ b/more.html
@@ -65,13 +65,14 @@
         </div>
 
         <div class="icon-row">
-            <span class="icon-row__red-dot"> </span>
             <div class="icon-row__icon">
                 <i class="far fa-calendar"></i>
                 <span>Calendar</span>
             </div>
             <div class="icon-row__icon">
-                <i class="fa-solid fa-box-archive"></i>
+                <i class="fa-solid fa-box-archive">
+                    <div class="icon-row__red-dot"> </div>
+                </i>
                 <span>Talk Drive</span>
             </div>
             <div class="icon-row__icon">
