--- a/chats.html
+++ b/chats.html
@@ -40,27 +40,30 @@
                 <i class="fa-solid fa-music fa-lg"></i>
             </span>
             <span>
-                <i class="fa-solid fa-gear fa-lg"></i>
+                <a href="settings.html">
+                    <i class="fa-solid fa-gear fa-lg"></i>
+                </a>
             </span>
         </div>
     </header>
 
 
     <main class="main-screen">
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="img/証明写真.jpg" class="user-component__avatar user-component__avatar" />
-                <div class="user-component__text">
-                    <h4 class="user-component__title">Kim</h4>
-                    <h6 class="user-component__subtitle">Please chack My Kokoa Account Info</h6>
+        <a href="chat.html">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="img/証明写真.jpg" class="user-component__avatar user-component__avatar" />
+                    <div class="user-component__text">
+                        <h4 class="user-component__title">Kim</h4>
+                        <h6 class="user-component__subtitle">Please chack My Kokoa Account Info</h6>
+                    </div>
+                </div>
+                <div class="user-component__column">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
-            </div>
-        </div>
-
+        </a>
         <div class="divider"></div>
 
         <div class="user-component">
