--- a/find.html
+++ b/find.html
@@ -35,7 +35,9 @@
                 <i class="fa-solid fa-magnifying-glass fa-lg"></i>
             </span>
             <span>
-                <i class="fa-solid fa-gear fa-lg"></i>
+                <a href="settings.html">
+                    <i class="fa-solid fa-gear fa-lg"></i>
+                </a>
                 <span class="screen-reddot"> </span>
             </span>
         </div>
