--- a/chat.html
+++ b/chat.html
@@ -90,6 +90,9 @@
         </div>
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big!</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
 </body>
