--- a/chats.html
+++ b/chats.html
@@ -84,7 +84,7 @@
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html">
-                <i class="far fa-user fa-2x"></i>
+                    <i class="far fa-user fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
@@ -95,17 +95,21 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html">
-                <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+                    <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                 </a>
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="more.html">
                     <span class="nav__red-dot"> </span>
-                <i class="fa-solid fa-ellipsis fa-2x"></i>
+                    <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
         </ul>
     </nav>
+
+    <div id="no-mobile">
+        <span>Your screen is too big!</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
 </body>
