--- a/find.html
+++ b/find.html
@@ -149,6 +149,10 @@
         </ul>
     </nav>
 
+    <div id="no-mobile">
+        <span>Your screen is too big!</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
 </body>
 </html>
