--- a/friends.html
+++ b/friends.html
@@ -111,6 +111,14 @@
         </ul>
     </nav>
 
+    <div id="splash-screen">
+        <i class="fa-solid fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+        <span>Your screen is too big!</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
 </body>
 </html>
