--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <a href="#">Find Kokoa Account or Password</a>    
     </form>
 
+    <div id="no-mobile">
+        <span>Your screen is too big!</span>
+    </div>
+
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
 </body>
 </html>
