--- a/friends.html
+++ b/friends.html
@@ -116,7 +116,7 @@
     </div>
 
     <div id="no-mobile">
-        <span>Your screen is too big!</span>
+        <span>Your screen is super big!</span>
     </div>
 
     <script src="https://kit.fontawesome.com/8bc384430b.js" crossorigin="anonymous"></script>
