--- a/chat.html
+++ b/chat.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="message-row">
-            <img src="img/dog.jpg"/>
+            <img src="img/profile_3.jpg"/>
             <div class="message-row__content">
                 <span class="message__author">Kim</span>
                 <div class="message__info">
