--- a/find.html
+++ b/find.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="img/Goust.jpg" />
+                        <img src="img/profile_2.jpg" />
                         <div class="open-post__heart-count">
                             <i class="fa-solid fa-heart fa-xs"></i>
                             <span>326</span>
